# demo-tic-tac-toe

./: README.md  demo-tic-tac-toe.cabal
app/: Main.hs
src/: TicTacToe.hs
