name:                demo-tic-tac-toe
version:             0.1
synopsis:            Игра «Крестики-нолики» на поле N×M.
-- description:
homepage:            https://github.com/cmc-haskell-2017/demo-tic-tac-toe#readme
license:             MIT
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2017 Nickolay Kudasov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TicTacToe
  build-depends:       base >= 4.7 && < 5
                     , gloss
  default-language:    Haskell2010

executable demo-tic-tac-toe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , demo-tic-tac-toe
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2017/demo-tic-tac-toe
